Fixed instagram bug. Fixed stretching issue.

--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -32,7 +32,7 @@
 .Blog-tile {
     margin-top:20px;
     width: 400px;
-    height: 800px;
+    height: 700px;
     float: left;
 }
 .Blog-header-subtitle{
@@ -64,7 +64,7 @@
     position:absolute;
     top:0;
     width:100%;
-    height:600px;
+    height:500px;
 }
 .Blog-img {
     text-align:center;
@@ -75,7 +75,7 @@
     padding:0;
 }
 .Blog-title-container{
-    margin-top:620px;
+    margin-top:500px;
     width:100%;
     padding:10px;
     height:40px;
