--- a/src/pages/Post/Post.css
+++ b/src/pages/Post/Post.css
@@ -12,7 +12,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 50%;
     margin-top:100px;
 }
 .Post-title{
